<resources>

    <string name="app_name">Relay01</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_relay_manager">Relay Manager</string>
	<string name="radio_uno">Arduino Uno</string>
    <string name="radio_mega">Arduino Mega 2560</string>
    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="initial_text">Ready&#8230;
        &#13;&#10;</string>
</resources>